src/components/menus/TopMenu.module.scss
@import '../../base/module';

.header {
  width: 100%;
  background: $color-white;
  position: fixed;
  z-index: 100;
  top: 0;
  border-bottom: 1px solid #f1f0ef;

  .skip_button {
    border-radius: 0.5em;
    padding: 8px 8px 12px;
    background-color: $color-cream;
    border: 2px solid $color-rustorange;
    color: $color-black;
    font-size: 18px;
    font-weight: 400;
    letter-spacing: 0.025em;
    margin: 10px;
    text-align: center;
    text-decoration: none;
    position: absolute;
    transform: translateY(-175%);
    transition: transform 0.3s;
    z-index: 3;

    &:focus {
      transform: translateY(0%);
    }
  }
}
.navBar {
  width: 100%;
  height: 100%;
  padding: 25px 0 18px;
  display: flex;
  align-items: center;
  gap: 0;
  justify-content: space-between;
  font-family: $font-secondary;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 10%;
  margin: 0 auto;

  .icon-nav {
    display: flex;
    justify-content: flex-end;
    gap: 20px;
    align-items: center;
    width: 50%;
    @media (max-width: $desktop) {
      width: 100%;
    }
  }

  @media (min-width: $desktop) {
    gap: $gap;
  }
  @media (max-width: $tablet) {
    justify-content: flex-end;
    padding: 12px 0;
  }
}

.locationBtn {
  background: transparent;
  font-family: $font-secondary;
  opacity: 50%;
  text-transform: uppercase;
  font-weight: 600;
  vertical-align: top;
  letter-spacing: 10%;
  cursor: pointer;
  white-space: nowrap;
  color: $color-black;

  &:first-child::after {
    content: '';
    height: 20px;
    width: 2px;
    margin: 0 8px;
    background: $color-orange;
    display: inline-block;
    vertical-align: top;
    font-weight: 700;
  }
}

.locationBtn:focus {
  span {
    outline: 2px solid black;
    outline-offset: 2px;
  }
}
.activeBtn {
  opacity: 100%;
}

.mobileBtn {
  cursor: pointer;
  background: transparent;
  color: $color-rustorange;
  padding: 12px 12px 7px;
  font-size: 1.5em;
  vertical-align: baseline;
  background: #f5f3f2;
  border-radius: 50%;
  border: 1px solid #b8b8bc;

  @media (min-width: $desktop) {
    display: none;
  }
}

.NavWrap {
  width: 100%;

  //Mobile Nav
  background: $color-cream;
  padding: 5%;
  position: absolute;
  width: 100%;
  height: 100vh;
  top: 75px;
  bottom: 0;
  left: 0;
  right: 0;
  transform: translateX(-100%);
  transition: transform 300ms ease-in-out;

  .MenuLinks {
    display: block;
    font-size: 1.8em;

    a {
      color: $color-black;
      margin-bottom: 15px;
      display: block;
    }

    @media (min-width: $desktop) {
      display: flex;
      flex-wrap: wrap;
      flex-grow: 1;
      align-self: flex-start;
      gap: 15px;
      font-size: 1em;

      a {
        display: inline;
        margin: 0;
      }
    }
  }

  .SocialGroup {
    text-align: center;
    display: none;
    margin-top: 20px;

    .SocialLinks {
      display: flex;
      align-items: center;
      justify-content: flex-start;

      .SocialLink {
        padding-left: 10px;
        padding-right: 10px;
        color: $color-black;
      }
    }
  }

  &.nav-open {
    transform: translateX(0);

    .SocialGroup {
      display: block;
    }
  }

  @media (min-width: $desktop) {
    position: relative;
    height: auto;
    display: flex;
    transform: none;
    top: initial;
    left: initial;
    right: initial;
    bottom: initial;
    padding: 0;
    background: transparent;
  }

  @media (min-width: $full) {
    max-width: width(7.5);
  }
}

.navBarIcons {
  display: flex;
  justify-content: flex-end;
  align-items: center;

  a {
    padding: 0 5px;
    color: $color-black;
    height: 25px;
  }

  @media (min-width: $tablet) {
    a {
      padding: 0 10px;
      color: $color-black;
    }
  }
}

.desktopTablet {
  display: none;
}

.mobile {
  display: inline;
}

@media (min-width: 768px) {
  .desktopTablet {
    display: inline;
  }
  .mobile {
    display: none;
  }
}

